--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
 
     <title>Wizic</title>
-    <link
-      rel="shortcut icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>&#127752;</text></svg>"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="src/img/CasqueWizic.png" type="image/x-icon" />
   </head>
   <body>
     <noscript> You need JavaScript to run this ! </noscript>
